overflow fix

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -4991,6 +4991,7 @@ h2 a:hover {
   transition: all .3s ease;
   transform: scale(.95);
   z-index: -1;
+  overflow: hidden;
   
 }
 
@@ -5029,7 +5030,7 @@ h2 a:hover {
   position: relative;
   z-index: 1;
   padding: 28px;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .panel__wrapper-icon .panel__list li .icon {
